Crawl Web Domain modal styling

--- a/findly-builder/src/app/components/add-source/add-source.component.scss
+++ b/findly-builder/src/app/components/add-source/add-source.component.scss
@@ -988,7 +988,7 @@
 .scheduler-box{
     //position: absolute;
     width: 981px;
-    height: 50px;
+    // height: 50px;
     background: #FFFFFF;
    // box-shadow: inset 0px -1px 0px #E4E5E7;
    .scheduler-txt{
