--- a/findly-builder/src/app/components/content-source/content-source.component.scss
+++ b/findly-builder/src/app/components/content-source/content-source.component.scss
@@ -842,15 +842,21 @@
     .downArrow {
         top: 2.3px !important;
         margin-right: 0px !important;
+        margin-left: -8px;
     }
     .upArrow {
         transform: rotate(180deg) !important;
         top: -4px !important;
         left: -12px !important;
+        margin-left: -8px;
     }
     .display-none {
         visibility: hidden;
     }
     .display-block {
         visibility: visible;
+    }
+
+    .custom-dropdown-toggle-icon {
+        margin-left: 10px !important;
     }
