Build contains resolution of build-time error, related to declaration of a two-way binded variable in add-source component.

--- a/findly-builder/src/app/components/add-source/add-source.component.html
+++ b/findly-builder/src/app/components/add-source/add-source.component.html
@@ -405,7 +405,7 @@
           only link bots
           that you have the rights to access.</p>
         <div class="bots-modal-search-input-container">
-          <input class="bots-modal-search-input" type="text" placeholder="Search Associated Bots"
+          <input class="bots-modal-search-input" type="text" placeholder="Search"
             [(ngModel)]="searchAssociatedBots" name="searchAssociatedBots">
           <img class="bots-modal-search-icon" src="assets/images/search_gray.svg">
         </div>
