--- a/findly-builder/src/app/components/content-source/content-source.component.scss
+++ b/findly-builder/src/app/components/content-source/content-source.component.scss
@@ -251,7 +251,7 @@
             }
             .modal-body{
                 height: calc(100vh - 70px);
-                padding: 20px 0 60px 30px !important;
+               // padding: 20px 0 60px 30px !important;
                 perfect-scrollbar{
                     &.scroll-table{
                         padding-right: 30px;
@@ -838,7 +838,35 @@
         }
     }
     
-
+    .mod-foot{
+        justify-content: left !important;
+        height: 60px;
+        border-top: solid 0px #e5e8ec;
+        /* background-color: #f2f3f5; */
+        padding: 6px 30px;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        border-bottom-right-radius: calc(.3rem - 1px);
+        border-bottom-left-radius: calc(.3rem - 1px);
+        .btn_lg{
+            margin: 8px;
+        }
+    }
+    .par{
+        .actions-images{
+            display: none;
+            white-space: normal;
+            img{
+                margin: 0 6px;
+            }
+        }
+        &:hover{
+            .actions-images{
+                display: block;
+            }
+        }
+    }
     .downArrow {
         top: 2.3px !important;
         margin-right: 0px !important;
