--- a/findly-builder/src/app/components/traits/traits.component.scss
+++ b/findly-builder/src/app/components/traits/traits.component.scss
@@ -190,6 +190,9 @@
                   margin-bottom: 5px;
                   float: left;
                   width: auto;
+                  .kr-sg-tags{
+                    background-color: #9b9b9b4d;
+                  }
                 }
                 cursor: default;
             }
