Traits UI css updates

--- a/findly-builder/src/app/components/traits/traits.component.html
+++ b/findly-builder/src/app/components/traits/traits.component.html
@@ -51,7 +51,7 @@
         <div class="tost-text">Please click on 'Train' button to update your traits model with the latest
             changes.
             Your bot will identify the traits using latest changes only after the training is completed.</div>
-        <button class="kr-sg-button-primary" (click)="trainBot()">Train</button>
+        <button class="kr-sg-button-primary ml-2" (click)="trainBot()">Train</button>
     </div>
     <div class="defineTraitsContainer d-none">
         <div class="col-5 leftDiv">
