--- a/findly-builder/src/app/components/traits/traits.component.scss
+++ b/findly-builder/src/app/components/traits/traits.component.scss
@@ -168,7 +168,8 @@
         }
       }
       .traits{
-        padding: 30px 30px 30px 70px;
+        padding: 0px 30px 0px 30px;
+        width: 100%;
         .defineTraitsContainer{
             display: flex;
             .backArrowDiv{
