--- a/findly-builder/src/app/components/add-source/add-source.component.html
+++ b/findly-builder/src/app/components/add-source/add-source.component.html
@@ -201,7 +201,7 @@
               </div>
               <!-- Annotation End Here -->
               <div class="kr-sg-input-text mb-4" *ngIf="(selectedSourceType.sourceType==='faq')">
-                <div class="label_text mt-3 text-center">or</div>
+                <!-- <div class="label_text mt-3 text-center">or</div> -->
               </div>
             </div>
             <!-- File uploader with Drag & Drop ENDS HERE -->
