--- a/findly-builder/src/app/scss/styles.scss
+++ b/findly-builder/src/app/scss/styles.scss
@@ -1353,7 +1353,20 @@ div.divBlockEmptylastChild:first-child {
     }
 }
 
-
+.delete-popup{
+    .mat-dialog-container{
+        .m-footer{
+            .kr-sg-button-primary{
+                border: 1px solid transparent;
+                background: #d2000d;
+                color: #fff;
+                &:hover{
+                    background: #bc000b;
+                }
+            }
+        }
+    }
+}
 .cursor-pointer{
     cursor: pointer;
 }
