--- a/findly-builder/src/app/components/faq-source/faq-source.component.html
+++ b/findly-builder/src/app/components/faq-source/faq-source.component.html
@@ -411,7 +411,11 @@
                         <div class="col text-right last-child">
                             <span class="actions-links" (click)="deleteSource(source,$event)"  ngbTooltip='Delete'><img class="action_icon" src="assets/icons/sidemenu/delete-table.svg"></span>
                             <!-- <span class="actions-links"><img class="action_icon" src="assets/images/list.svg"></span> -->
+                            <!-- <span class="actions-links" (click)="reAnnotateDocument(source)"  ngbTooltip='Re-Annotate'><img class="action_icon" src="assets/images/list.svg"></span> -->
                         </div>
+                        <!-- <div class="col text-right last-child re-annotate">
+                            <span class="actions-links" (click)="reAnnotateDocument(source)"  ngbTooltip='Re-Annotate'><img class="action_icon" src="assets/images/list.svg"></span>
+                        </div> -->
                     </div>
                     <div class="empty">No Search Results found</div>
                     </perfect-scrollbar>
