--- a/findly-builder/src/app/components/stop-words/stop-words.component.html
+++ b/findly-builder/src/app/components/stop-words/stop-words.component.html
@@ -13,10 +13,12 @@
       </div>     
     </div>    
     <div *ngIf="!loadingContent" class="stop-words-wrapper">
-      <div class="addStopWordsBlock" *ngIf="((stopwords && stopwords.length) && !loadingContent) || createFromScratch">
+      <div class="m-0 row addStopWordsBlock" *ngIf="((stopwords && stopwords.length) && !loadingContent) || createFromScratch">
+        <div class="label_text col-12 p-0">Add Stop Word</div>
         <div class="kr-sg-input-text">
-            <div class="label-text">Add Stop Word</div>
-            <input type="text" autocomplete="off" placeholder="Add multiple words with comma seperation" class="input-text" [(ngModel)]="newStopWord">
+            <input type="text" autocomplete="off" (keyup)="validate($event)" placeholder="Add multiple words with comma seperation" class="input-text" [(ngModel)]="newStopWord">
+            <div class="error-msg" *ngIf="validation.duplicate"><img class="pr-1" src="assets/icons/warning_escalation.svg">Stop word already added</div>
+            <div class="error-msg" *ngIf="validation.spaceFound"><img class="pr-1" src="assets/icons/warning_escalation.svg">Stop word should not have space in between</div>
         </div>
         <div class="addStopWordsButton">
             <button class="kr-sg-button-primary btn_lg" (click)="addStopWord()">Save</button>
