--- a/findly-builder/src/app/scss/styles.scss
+++ b/findly-builder/src/app/scss/styles.scss
@@ -1356,7 +1356,7 @@ div.divBlockEmptylastChild:first-child {
 .delete-popup{
     .mat-dialog-container{
         .m-footer{
-            .kr-sg-button-primary{
+            .dangerBtn {
                 border: 1px solid transparent;
                 background: #d2000d;
                 color: #fff;
