--- a/findly-builder/src/app/helpers/components/confirmation-dialog/confirmation-dialog.component.html
+++ b/findly-builder/src/app/helpers/components/confirmation-dialog/confirmation-dialog.component.html
@@ -7,7 +7,7 @@
     <div class="info-text" *ngIf="data.text2">{{data.text2}}</div>
   </div>
   <div class="m-footer">
-    <button *ngFor="let item of data.buttons" [disabled]="isSelected" (click)="onClickOption(item)" class="kr-sg-button-primary btn_md" [ngClass]="{'kr-sg-button-secondary': (item.label==='Cancel') || (item.secondaryBtn)}">
+    <button *ngFor="let item of data.buttons" [disabled]="isSelected" (click)="onClickOption(item)" class="kr-sg-button-primary btn_md" [ngClass]="{'kr-sg-button-secondary': (item.label==='Cancel') || (item.secondaryBtn),'dangerBtn':item.type==='danger'}">
       {{item.label}}
       <div class="loader-in-button ml-2"*ngIf="item.key === 'save' && isSelected" style="display: inline-block"><img src="assets/images/icons/fa-spinner.svg"></div>
     </button>
