--- a/findly-builder/src/app/components/facets/facets.component.html
+++ b/findly-builder/src/app/components/facets/facets.component.html
@@ -47,7 +47,7 @@
                             <input id="{{facet._id}}" class="checkbox-custom selectEachfacetInput" (change)="checkUncheckfacets(facet)" type="checkbox">
                             <label for="{{facet._id}}" class="checkbox-custom-label"></label>
                         </div>
-                        <div class="title">{{facet.facetName}}<img class="pl-1" *ngIf="facet.isFieldNameExists === false"  src="assets/icons/warning_escalation.svg" [tooltipClass]="'whiteTooltip'" triggers="manual" #t2="ngbTooltip" (click)="t2.open()" container="body"  ngbTooltip='Associated Field is deleted or renamed.'></div>
+                        <div class="title">{{facet.facetName}}<img class="pl-1" *ngIf="facet.isFieldNameExists === false"  src="assets/icons/warning_escalation.svg" [tooltipClass]="'whiteTooltip'" container="body"  ngbTooltip='Associated Field is deleted or renamed.'></div>
                     </div>
                     <div class="col-3 content">{{facet.facetType | translate}}</div>
                     <div class="col-3 content">{{facet.isMultiSelect?'Yes':'No'}}</div>
